--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!-- 
           /\['''']/\    <-- Oh no! A headcrab!
-  -->
+-->
 
 <html lang="en">
 
@@ -18,7 +18,48 @@
 <body>
   <div class="wrapper">
     <div class="container">
-
+      <div class="home">
+        <header class="home__header">
+          <div class="home__header_logo">
+            <img src="img/icons/logo.svg" alt="logo">
+          </div>
+          <nav class="home__header_nav">
+            <ul>
+              <li>
+                <a href="#">
+                  Home
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  About
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Work
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Contact
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <p class="home__text">
+          Hi there! We are the new kids on the block and we build awesome websites and mobile apps.
+        </p>
+        <button href="#" class="home__btn btn">
+          Work with us!
+        </button>
+      </div>
     </div>
   </div>
 </body>
