Added "Services" section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="wrapper">
     <div class="container">
-      <div class="home">
+      <div class="home section">
         <header class="home__header">
           <div class="home__header_logo">
             <img src="img/icons/logo.svg" alt="logo">
@@ -59,6 +59,61 @@
         <button href="#" class="home__btn btn">
           Work with us!
         </button>
+      </div>
+      <div class="services section">
+        <div class="services__heading heading">
+          Services we provide
+        </div>
+        <p class="services__text">
+          We are working with both individuals and businesses from all over the globe to create awesome websites and
+          applications.
+        </p>
+        <div class="services__items">
+          <div class="services__item">
+            <div class="services__item_icon">
+              <embed src="img/icons/flag.svg" alt="">
+            </div>
+            <div class="services__item_caption">
+              Branding
+            </div>
+            <div class="services__item_text">
+              The car, Dad, I mean He wrecked it, totaled it.
+            </div>
+          </div>
+          <div class="services__item">
+            <div class="services__item_icon">
+              <embed src="img/icons/pencil.svg" type="">
+            </div>
+            <div class="services__item_caption">
+              Design
+            </div>
+            <div class="services__item_text">
+              You got a real attitude problem, McFly. You're a slacker.
+            </div>
+          </div>
+          <div class="services__item">
+            <div class="services__item_icon">
+              <embed src="img/icons/gears.svg" type="">
+            </div>
+            <div class="services__item_caption">
+              Development
+            </div>
+            <div class="services__item_text">
+              This is it. This is the answer. It says here
+            </div>
+          </div>
+          <div class="services__item">
+            <div class="services__item_icon">
+              <embed src="img/icons/rocket.svg" type="">
+            </div>
+            <div class="services__item_caption">
+              Rocket Science
+            </div>
+            <div class="services__item_text">
+              Doc? Am I to understand you're still hanging around with
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
