Added "Team" section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="services__heading heading">
           Services we provide
         </div>
-        <p class="services__text">
+        <p class="services__text text">
           We are working with both individuals and businesses from all over the globe to create awesome websites and
           applications.
         </p>
@@ -111,6 +111,126 @@
             </div>
             <div class="services__item_text">
               Doc? Am I to understand you're still hanging around with
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="team section">
+        <div class="team__heading heading">
+          Meet our beautiful team
+        </div>
+        <p class="team__text text">
+          We are a small team of designers and developers, who help brands with big ideas.
+        </p>
+        <div class="team__items">
+          <div class="team__item">
+            <div class="team__item_avatar">
+
+            </div>
+            <div class="team__item_name">
+              Nick Fury
+            </div>
+            <div class="team__item_position">
+              CEO / Marketing Guru
+            </div>
+            <p class="team__item_text">
+              Let me tell you. That kid's not even here yet, and there's nothing I wouldn't do for him. Good to meet
+              you, Potts.
+            </p>
+            <div class="team__item_socials">
+              <a href="#">
+                <img src="img/icons/facebook-Icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/twitter-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/linkedIn-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/mail-icon.png" alt="">
+              </a>
+            </div>
+          </div>
+          <div class="team__item">
+            <div class="team__item_avatar">
+
+            </div>
+            <div class="team__item_name">
+              Marty McFly
+            </div>
+            <div class="team__item_position">
+              Creative Director
+            </div>
+            <p class="team__item_text">
+              How could I have been so careless. One point twenty-one gigawatts. Tom, how am I gonna generate that kind
+              of power, it can't be done, it can't.
+            </p>
+            <div class="team__item_socials">
+              <a href="#">
+                <img src="img/icons/twitter-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/linkedIn-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/mail-icon.png" alt="">
+              </a>
+            </div>
+          </div>
+          <div class="team__item">
+            <div class="team__item_avatar">
+
+            </div>
+            <div class="team__item_name">
+              Luke Skywalker
+            </div>
+            <div class="team__item_position">
+              Lead Designer
+            </div>
+            <p class="team__item_text">
+              The approach will not be easy. You are required to maneuver straight down this trench and skim the surface
+              to this point. The target area is only two meters wide.
+            </p>
+            <div class="team__item_socials">
+              <a href="#">
+                <img src="img/icons/facebook-Icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/twitter-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/linkedIn-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/mail-icon.png" alt="">
+              </a>
+            </div>
+          </div>
+          <div class="team__item">
+            <div class="team__item_avatar">
+
+            </div>
+            <div class="team__item_name">
+              Jim Halpert
+            </div>
+            <div class="team__item_position">
+              SEO / Developer
+            </div>
+            <p class="team__item_text">
+              Through the lens of. Increase the resolution, scale it up
+              we need a larger print please use "solutionise" instead of solution ideas! :)
+            </p>
+            <div class="team__item_socials">
+              <a href="#">
+                <img src="img/icons/facebook-Icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/twitter-icon.png" alt="">
+              </a>
+              <a href="#">
+                <img src="img/icons/mail-icon.png" alt="">
+              </a>
             </div>
           </div>
         </div>
