Added "skills" section

--- a/index.html
+++ b/index.html
@@ -235,6 +235,49 @@
           </div>
         </div>
       </div>
+      <div class="skills section">
+        <div class="skills__heading heading">
+          We got skills!
+        </div>
+        <div class="skills__text">
+          Hey, hey, keep rolling, keep rolling there. No, no, no, no, this sucker's electrical. But I need a nuclear
+          reaction to generate the one point twenty-one gigawatts of electricity that I need.
+        </div>
+        <div class="skills__items">
+          <div class="skills__item">
+            <div class="skills__progress">
+              <img src="img/progress1.png" alt="">
+            </div>
+            <div class="skills__name">
+              Web design
+            </div>
+          </div>
+          <div class="skills__item">
+            <div class="skills__progress">
+              <img src="img/progress2.png" alt="">
+            </div>
+            <div class="skills__name">
+              HTML / CSS
+            </div>
+          </div>
+          <div class="skills__item">
+            <div class="skills__progress">
+              <img src="img/progress3.png" alt="">
+            </div>
+            <div class="skills__name">
+              Graphic design
+            </div>
+          </div>
+          <div class="skills__item">
+            <div class="skills__progress">
+              <img src="img/progress4.png" alt="">
+            </div>
+            <div class="skills__name">
+              UI / UX
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
