PNG charts replaced by SVGs

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
         <div class="skills__items">
           <div class="skills__item">
             <div class="skills__progress">
-              <img src="img/progress1.png" alt="">
+              <!-- <img src="img/progress1.png" alt=""> -->
+              <embed src="img/progress1.svg" type="">
             </div>
             <div class="skills__name">
               Web design
@@ -254,7 +255,8 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <img src="img/progress2.png" alt="">
+              <!-- <img src="img/progress2.png" alt=""> -->
+              <embed src="img/progress2.svg" type="">
             </div>
             <div class="skills__name">
               HTML / CSS
@@ -262,7 +264,8 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <img src="img/progress3.png" alt="">
+              <!-- <img src="img/progress3.png" alt=""> -->
+              <embed src="img/progress3.svg" type="">
             </div>
             <div class="skills__name">
               Graphic design
@@ -270,7 +273,8 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <img src="img/progress4.png" alt="">
+              <!-- <img src="img/progress4.png" alt=""> -->
+              <embed src="img/progress4.svg" type="">
             </div>
             <div class="skills__name">
               UI / UX
