Added animations to SVGs

--- a/index.html
+++ b/index.html
@@ -239,14 +239,13 @@
         <div class="skills__heading heading">
           We got skills!
         </div>
-        <div class="skills__text">
+        <div class="skills__text text">
           Hey, hey, keep rolling, keep rolling there. No, no, no, no, this sucker's electrical. But I need a nuclear
           reaction to generate the one point twenty-one gigawatts of electricity that I need.
         </div>
         <div class="skills__items">
           <div class="skills__item">
             <div class="skills__progress">
-              <!-- <img src="img/progress1.png" alt=""> -->
               <embed src="img/progress1.svg" type="">
             </div>
             <div class="skills__name">
@@ -255,7 +254,6 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <!-- <img src="img/progress2.png" alt=""> -->
               <embed src="img/progress2.svg" type="">
             </div>
             <div class="skills__name">
@@ -264,7 +262,6 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <!-- <img src="img/progress3.png" alt=""> -->
               <embed src="img/progress3.svg" type="">
             </div>
             <div class="skills__name">
@@ -273,7 +270,6 @@
           </div>
           <div class="skills__item">
             <div class="skills__progress">
-              <!-- <img src="img/progress4.png" alt=""> -->
               <embed src="img/progress4.svg" type="">
             </div>
             <div class="skills__name">
@@ -282,6 +278,8 @@
           </div>
         </div>
       </div>
+      <!-- * A JS logic for the doughnut-charts is needs to add later -->
+      <!-- * and from SVGs remove some paddings too-->
     </div>
   </div>
 </body>
