--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p class="home__text">
           Hi there! We are the new kids on the block and we build awesome websites and mobile apps.
         </p>
-        <button href="#" class="home__btn btn">
+        <button type="submit" href="#" class="home__btn btn">
           Work with us!
         </button>
       </div>
@@ -278,8 +278,70 @@
           </div>
         </div>
       </div>
-      <!-- * A JS logic for the doughnut-charts is needs to add later -->
+      <!-- * A JS logic for the doughnut-charts needs to add later -->
       <!-- * and from SVGs remove some paddings too-->
+      <div class="portfolio section">
+        <div class="portfolio__heading heading">
+          Our portfolio
+        </div>
+        <div class="portfolio__text text">
+          You wait and see, Mr. Caruthers, I will be mayor and I'll be the most powerful mayor in the history of Hill
+          Valley, and I'm gonna clean up this town.
+        </div>
+        <nav class="portfolio__nav">
+          <ul>
+            <li>
+              <a href="#">
+                All
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Web
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Apps
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Icons
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="portfolio__items">
+          <div class="portfolio__item">
+            <img src="img/portfolio1.png" alt="">
+            <p class="portfolio__name">
+              Isometric Perspective Mock-Up
+            </p>
+          </div>
+          <div class="portfolio__item">
+            <img src="img/portfolio2.png" alt="">
+            <p class="portfolio__name">
+              Time Zone App UI
+            </p>
+          </div>
+          <div class="portfolio__item">
+            <img src="img/portfolio3.png" alt="">
+            <p class="portfolio__name">
+              Viro Media Players UI
+            </p>
+          </div>
+          <div class="portfolio__item">
+            <img src="img/portfolio4.png" alt="">
+            <p class="portfolio__name">
+              Blog / Magazine Flat UI Kit
+            </p>
+          </div>
+        </div>
+        <button type="submit" href="#" class="portfolio__btn btn">
+          Load more projects
+        </button>
+      </div>
     </div>
   </div>
 </body>
