Added "Reviews" section

--- a/index.html
+++ b/index.html
@@ -342,6 +342,92 @@
           Load more projects
         </button>
       </div>
+      <div class="reviews section">
+        <div class="reviews__heading heading">
+          What people say about us
+        </div>
+        <div class="reviews__text text">
+          Our clients love us!
+        </div>
+        <div class="reviews__items">
+          <div class="reviews__item">
+            <div class="reviews__avatar">
+              <img src="img/Base.png" alt="">
+            </div>
+            <div class="reviews__item-review">
+              <p class="reviews__item-text">
+                "Uh, stories, science fiction stories, about visitors coming down to Earth from another planet."
+              </p>
+              <div class="reviews__person">
+                <p class="reviews__name">
+                  Peter Parker
+                </p>
+                <p class="reviews__position">
+                  CEO of Pinterest
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="reviews__item">
+            <div class="reviews__avatar">
+              <img src="img/Base.png" alt="">
+            </div>
+            <div class="reviews__item-review">
+              <p class="reviews__item-text">
+                "Well, they're your parents, you must know them. What are their common interests, what do they like to
+                do together?"
+              </p>
+              <div class="reviews__person">
+
+                <p class="reviews__name">
+                  Gordon Freeman
+                </p>
+                <p class="reviews__position">
+                  Founder of Instagram
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="reviews__item">
+            <div class="reviews__avatar">
+              <img src="img/Base.png" alt="">
+            </div>
+            <div class="reviews__item-review">
+              <p class="reviews__item-text">
+                "That Biff, what a character. Always trying to get away with something. Been on top of Biff ever since
+                high school. Although, if it wasn't for him."
+              </p>
+              <div class="reviews__person">
+                <p class="reviews__name">
+                  Bruce Benner
+                </p>
+                <p class="reviews__position">
+                  Lead Designer at Behance
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="reviews__item">
+            <div class="reviews__avatar">
+              <img src="img/Base.png" alt="">
+            </div>
+            <div class="reviews__item-review">
+              <p class="reviews__item-text">
+                "Alright, alright, okay McFly, get a grip on yourself. It's all a dream. Just a very intense dream. Woh,
+                hey, listen, you gotta help me."
+              </p>
+              <div class="reviews__person">
+                <p class="reviews__name">
+                  Carl Johnson
+                </p>
+                <p class="reviews__position">
+                  Co-Founder of Shazam
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
