Added feedback form and footer

--- a/index.html
+++ b/index.html
@@ -428,6 +428,44 @@
           </div>
         </div>
       </div>
+      <div class="feedback section">
+        <div class="feedback__heading heading">
+          Get in touch
+        </div>
+        <div class="feedback__text text">
+          1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111
+        </div>
+        <form action="#" class="feedback__form">
+          <div class="feedback__form-inputs">
+            <input placeholder="Your Name *" type="text" class="feedback__input">
+            <input placeholder="Your E-Mail *" type="email" class="feedback__input">
+          </div>
+          <textarea placeholder="Your Message *" name="" id="" class="feedback__textarea"></textarea>
+          <button href="#" type="submit" class="feedback__btn btn">
+            Send message
+          </button>
+        </form>
+      </div>
+      <footer class="footer">
+        <a href="#" class="footer__link">
+          Facebook
+        </a>
+        <a href="#" class="footer__link">
+          Twitter
+        </a>
+        <a href="#" class="footer__link">
+          LinkedIn
+        </a>
+        <a href="" class="footer__link">
+          Behance
+        </a>
+        <a href="" class="footer__link">
+          Dribble
+        </a>
+        <a href="" class="footer__link">
+          GitHub
+        </a>
+      </footer>
     </div>
   </div>
 </body>
