Added burger menu for mobile devices

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
     <div class="container">
       <div class="home section">
         <header class="home__header">
-          <div class="home__header_logo">
+          <a href="#" class="home__header_logo">
             <img src="img/icons/logo.svg" alt="logo">
+          </a>
+          <div class="home__burger">
+            <span>
+
+            </span>
           </div>
           <nav class="home__header_nav">
-            <ul>
+            <ul class="home__header_list">
               <li>
                 <a href="#">
                   Home
@@ -466,8 +471,11 @@
           GitHub
         </a>
       </footer>
+
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 <!-- i'm domne -->
