--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 <!-- i'm domne -->
